--- a/index.html
+++ b/index.html
@@ -18,8 +18,32 @@ The left column should have the question, the right column should have your answ
 	<head>
 		<title>Code Challenge #6</title>
 	</head>
-	
 	<body>
-
+		<table border="1">
+			<tr>
+				<td>
+				What is your name?
+				</td>
+				<td>
+				James Dayton Morath
+				</td>
+			</tr>
+			<tr>
+				<td>
+				Where did you attend middle school?
+				</td>
+				<td>
+				Bon Lin middle school
+				</td>
+			</tr>
+			<tr>
+				<td>
+				What was your favorite vacation?
+				</td>
+				<td>
+				Going to New York City
+				</td>
+			</tr>
+		</table>
 	</body>
 </html>
